src/styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
*{
    margin: 0;
    padding: 0;
    border: none;
    outline: none;
    box-sizing: border-box;
    font-family: "Poppins",sans-serif;
}

.Sidebar {
    position: stucky;
    z-index: 1000;
    top: 0;
    left: 0;
    bottom: 0;
    width: 200px;
    height: 100vh;
    padding: 0 1.7rem;
    color: white;
    overflow: hidden;
    transition: left 6s ease;
    background: #0B0C40;
}

.hamburger {
    color: white;
    position: fixed;
    top: 20px;
    left: 20px;
    z-index: 1001;
}
.logo{
    height: 80px;
    padding: 16px;
}

.menu{
    height: 88%;
    position: relative;
    list-style: none;
    padding: 0;
}

.menu li{
    padding: 1rem;
    margin: 8px 0;
    border-radius: 8px;
    transition: all 0.5s ease-in-out;
}

.menu li:hover, 
.selected {
    background: #e0e0e058;
}

.menu a{
    color: white;
    font-size: 14px;
    text-decoration: none;
    display: flex;
    align-items: center;
    gap: 1.5rem;
}

.profile{
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
}
.product-manager{
    font-size: 10px;
    display: flex;
    align-items: center;
    gap: 1.5rem;
    color: #e0e0e058;
}

.App{
    background-color: #ebe9e9;
}

.main-content{
    position: relative;
    background-color: #ebe9e9;
    width: 100%;
    padding: 1rem;
    height: 100vh;
    overflow-y: scroll;
}

.header-wrapper{
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    background-color: #ebe9e9;
    border-radius: 10px;
    padding: 10px 2rem;
    margin-bottom: 1rem;
}
.user-info{
    display: flex;
    align-items: center;
    gap: 1;

}

.search{
    border-radius: 4px;
}

.search-box {
    position: relative;
  }
  
  .search {
    padding-left: 30px; 
  }
.fa-search {
    position: absolute;
    top: 50%;
    left: 10px; 
    transform: translateY(-50%);
    color: #aaa;
  }

.card-container{
    background-color: #ebe9e9;
    padding: 2rem;
    border-radius: 10px;
}
.card-main-title{
    display: flex;
    flex-direction: column;
    font-size: 15px;
    margin-right: auto;
}
.search-main-title{
    margin-bottom: 30px;
}
.title-header {
    display: flex;
    justify-content: space-between;
  }
.card-wrapper{
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}
.title, .amount-value{
    font-family: 'Courier New', Courier, monospace;
}
.payment-card{
    background:#fff;
    border-radius: 10px;
    padding: 1.2rem;
    width: 290px;
    height:120px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: all 0.5s ease-in-out;
}
.payment-card:hover{
    transform: translate(-5px);
}
.card-header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
}
.up-arrow{
    color: #26B561;
    font-weight: bold;
}
.down-arrow{
    color: #E22D49;
    font-weight: bold;
}
.icon{
   color: #fff;
    padding: 1rem;
    height: 60px;
    width: 60px;
    text-align: center;
    border-radius: 50%;
    font-size: 1.5rem;
    background: #E6FDF3;
}
.inside-icon{
    color: #26B561;
}
.icon1{
    color: #fff;
     padding: 1rem;
     height: 60px;
     width: 60px;
     text-align: center;
     border-radius: 50%;
     font-size: 1.5rem;
     background: #E7DBFF;
 }
 .inside-icon1{
     color: #A104FE;
 }
 .icon2{
    color: #CCF2FF;
     padding: 1rem;
     height: 60px;
     width: 60px;
     text-align: center;
     border-radius: 50%;
     font-size: 1.5rem;
     background: #CCF2FF;
 }
 .inside-icon2{
     color: #0D5CC1;
 }
 .icon3{
    color: #fff;
     padding: 1rem;
     height: 60px;
     width: 60px;
     text-align: center;
     border-radius: 50%;
     font-size: 1.5rem;
     background: #FEB2D9;
 }
 .inside-icon3{
     color: #E22D49;
 }
.table-wrapper{
    background:#fff;
    margin-top: 1rem;
    border-radius: 10px;
    padding: 2rem;
}
.table-container{
    width: 100%;
}
table{
    width: 100%;
    border-collapse: collapse;
}
th{
    font-family: 'Courier New', Courier, monospace;

}
tbody{
    background: #f2f2f2;
}
td{
    padding:15px;
    font-size:14px;
    color: #333;
}
tr:nth-child(even){
    background: #fff;
}
.prod-head{
    margin-right: 20px;
}
.graphs{
    position: relative;
    width: 100%;
    padding: 20px;
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-gap: 30px;
    min-height: 200px;
}
.graphs .box{
    position: relative;
    background: #fff;
    padding: 20px;
    width: 100%;
    box-shadow: 0 7px 25px rgba(0,0,0,0.08);
    border-radius: 20px;
}

.graphs .box1{
    position: relative;
    background: #fff;
    align-items: center;
    padding: 20px;
    width: 100%;
    box-shadow: 0 7px 25px rgba(0,0,0,0.08);
    border-radius: 20px;
    margin: auto;
    padding: 10px;
}

@media only screen and (max-width: 768px) {
    .Sidebar {
        width: 100%;
        padding: 0 0.5rem;
    }

    .menu li {
        padding: 0.8rem;
        margin: 4px 0;
        border-radius: 6px;
    }

    .header-wrapper {
        padding: 10px;
    }

    .card-container {
        padding: 1rem;
    }

    .card-wrapper {
        gap: 0.5rem;
    }

    .payment-card {
        padding: 1rem;
        height: auto;
        width: 100%;
    }

    .table-wrapper {
        padding: 1rem;
    }

    .table-container {
        width: 100%;
    }

    .graphs {
        grid-template-columns: 1fr;
    }

    .graphs .box{
        width: 100%;
    }
    .graphs .box1{
        width: 100%;
    }
}

@media only screen and (max-width: 600px) {
    .Sidebar {
        position: fixed;
        width: 200px;
        padding: 0 1.7rem;
    }
    .hamburger-min{
        color: black;
    }
    .menu li {
        padding: 0.8rem;
        margin: 4px 0;
        border-radius: 6px;
    }

    .header-wrapper {
        padding: 10px;
    }

    .card-container {
        padding: 1rem;
    }

    .card-wrapper {
        gap: 0.5rem;
    }

    .payment-card {
        padding: 1rem;
        height: auto;
        width: 100%;
    }

    .table-wrapper {
        padding: 1rem;
    }

    .table-container {
        width: 100%;
    }

    .graphs {
        grid-template-columns: 1fr;
    }

    .graphs .box, .graphs .box1 {
        width: 100%;
    }
}

@media only screen and (min-width: 600px) {
    .hamburger {
        display: none;
    }
}

